# lift

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  atomics.h  atomics_cuda.inl  atomics_host.inl  backends.h  compute_device.h  compute_device_host.h  decorators.h  memory.h  parallel.h  parallel_cuda.inl  parallel_host.inl  timer.h  trap.h  vector.h
algorithms/: binsearch.h  for_each.h
algorithms/cuda/: for_each.h  launch_parameters.h
cmake/: cub.cmake  tbb.cmake  thrust.cmake
docs/: Doxyfile  Makefile  conf.py  index.rst  initialization.rst  intro.rst  lift-vs-thrust.rst  memory.rst  requirements.txt
lift/: atomics.h  atomics_cuda.inl  atomics_host.inl  backends.h  compute_device_cuda.h  decorators.h  memory.h  parallel.h  test.h  timer.h  types.h  util.h
lift/algorithms/cuda/: for_each.h
lift/memory/: allocation.h  cuda_allocator.h  default_allocator.h  ldg_wrapper.h  local_memory.h  malloc_allocator.h  persistent_allocation.h  pointer.h  scoped_allocation.h  scoped_free.h  strided_iterator.h  thrust_wrappers.h  type_assignment_checks.h
lift/parallel/: parallel_cuda.inl  parallel_host.inl
lift/sys/: compute_device.h
lift/sys/cuda/: compute_device_cuda.h  cuda_context.h  suballocator.h
lift/sys/host/: compute_device_host.h  spinlock.h
lift/sys/host/x86_64/: vector_flags.h
lift/test/: check.h  test.h  test_list.h
lift/tests/: harness.h  random.h  test-list.h
memory/: allocation.h  const_memory_pointer.h  ldg_wrapper.h  memory.h  memory_pointer.h  persistent_allocation.h  pointer.h  scoped_allocation.h  scoped_memory_pointer.h  strided_iterator.h  type_assignment_checks.h
parallel/: parallel_cuda.inl  parallel_host.inl
parallel/tbb/: reduction.inl
src/: CMakeLists.txt
src/sys/cuda/: compute_device_cuda.cpp  compute_device_cuda.cu  cuda_context.cpp  suballocator.cpp
src/sys/host/x86_64/: x86_64_cpuid.cpp  x86_64_cpuid.cu  x86_64_cpuid.h
src/test/: command_line.cpp  command_line.h  entrypoint.cpp  entrypoint.cu  random.cu  test-list.cu  test_list.cpp  test_list.cu
tests/: CMakeLists.txt  copy_flagged.cu  copy_if.cu  cpuid.cu  fill.cu  for_each.cu  inclusive_scan.cu  parallel_tests.cu  pointer.cu  sort.cu  sum.cu  test_list.cu  timer.cu  util.cu
tests/harness/: liftest.cu  test_harness.h  test_list.cu
tests/standalone/: cpuid.cu
tests/thrust/: pointer_conversion.cu
